--- a/cv.html
+++ b/cv.html
@@ -20,8 +20,8 @@
 
 <body>
     <div class="global flex--column">
-<!-- ---------- HEADER ---------- -->
-<header>
+ <!-- ---------- HEADER ---------- -->
+ <header>
     <!-- <figure class="logo__container">
         <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
     </figure> -->
@@ -31,9 +31,9 @@
             Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
 
     </figure>
-    <figure class="avatar__container">
-        <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-    </figure>
+    
+    <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
+   
 </header>
 
 
@@ -42,7 +42,7 @@
     <div class="nav-deco"></div>
     <div class="sub-nav">
         <span></span>
-        <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
+        <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
             <a href="index.html" class="container active">
                 <figure class="overlayImg">
                     <!-- les icônes utilisées du sites flaticon (stickers) -->
@@ -64,7 +64,7 @@
                 <h3>ADW</h3>
                 <div class="overlayText">
                     <p class="text">
-                        L'histoire, les valeurs, les collaborateurs et notre travail
+                        Objectifs, Valeurs, Collaborateurs
                     </p>
                 </div>
             </a>
@@ -76,7 +76,7 @@
                 <h3>Gallerie</h3>
                 <div class="overlayText">
                     <p class="text">
-                        Lorem ipsum dolor sit amet.
+                        Découvrez nos réalisations
                     </p>
                 </div>
             </a>
@@ -88,7 +88,7 @@
                 <h3>Mon CV</h3>
                 <div class="overlayText">
                     <p class="text">
-                        Lorem ipsum dolor sit amet.
+                        Découvrez mes formations et mes expériences
                     </p>
                 </div>
             </a>
@@ -112,7 +112,8 @@
                 <h3>Contact</h3>
                 <div class="overlayText">
                     <p class="text">
-                        Lorem ipsum dolor sit amet.
+                        Pour plus d'information,
+                        Laissez nous un message.
                     </p>
                 </div>
             </a>
