--- a/faq.html
+++ b/faq.html
@@ -68,8 +68,8 @@
 
 <body>
     <div class="global flex--column">
-        <!-- ---------- HEADER ---------- -->
-        <header>
+         <!-- ---------- HEADER ---------- -->
+         <header>
             <!-- <figure class="logo__container">
                 <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
             </figure> -->
@@ -79,9 +79,9 @@
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
 
             </figure>
-            <figure class="avatar__container">
-                <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-            </figure>
+            
+            <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
+           
         </header>
 
 
@@ -90,11 +90,12 @@
             <div class="nav-deco"></div>
             <div class="sub-nav">
                 <span></span>
-                <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
+                <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
                     <a href="index.html" class="container active">
                         <figure class="overlayImg">
                             <!-- les icônes utilisées du sites flaticon (stickers) -->
-                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
                         </figure>
                         <h3>home</h3>
                         <div class="overlayText">
@@ -111,20 +112,19 @@
                         <h3>ADW</h3>
                         <div class="overlayText">
                             <p class="text">
-                                L'histoire, les valeurs, les collaborateurs et notre travail
+                                Objectifs, Valeurs, Collaborateurs
                             </p>
                         </div>
                     </a>
 
                     <a href="gallerie.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
+                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
                         </figure>
                         <h3>Gallerie</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez nos réalisations
                             </p>
                         </div>
                     </a>
@@ -136,13 +136,14 @@
                         <h3>Mon CV</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez mes formations et mes expériences
                             </p>
                         </div>
                     </a>
                     <a href="faq.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
                         </figure>
                         <h3>Q & R</h3>
                         <div class="overlayText">
@@ -160,8 +161,7 @@
                         <div class="overlayText">
                             <p class="text">
                                 Pour plus d'information,
-                                laissez nous un message.
-                                Nous vous répondrons dans un bref délais
+                                Laissez nous un message.
                             </p>
                         </div>
                     </a>
