--- a/mentionsLegales.html
+++ b/mentionsLegales.html
@@ -21,8 +21,8 @@
 
 <body>
     <div class="global">
-        <!-- ---------- HEADER ---------- -->
-        <header>
+         <!-- ---------- HEADER ---------- -->
+         <header>
             <!-- <figure class="logo__container">
                 <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
             </figure> -->
@@ -32,97 +32,98 @@
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
 
             </figure>
-            <figure class="avatar__container">
-                <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-            </figure>
+            
+            <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
+           
         </header>
 
 
-       <!-- --------- NAVIGATION ----- -->
-       <div class="navigation">
-        <div class="nav-deco"></div>
-        <div class="sub-nav">
-            <span></span>
-            <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
-                <a href="index.html" class="container active">
-                    <figure class="overlayImg">
-                        <!-- les icônes utilisées du sites flaticon (stickers) -->
-                        <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
-                            height="auto">
-                    </figure>
-                    <h3>home</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            Notre page d'accueil
-                        </p>
-                    </div>
-                </a>
-                <a href="about.html" class="container">
-                    <figure class="overlayImg">
-                        <img src="images/ADW-about01-icone.svg" alt="" class="nav--image" width="100%"
-                            height="auto">
-                    </figure>
-                    <h3>ADW</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            L'histoire, les valeurs, les collaborateurs et notre travail
-                        </p>
-                    </div>
-                </a>
+        <!-- --------- NAVIGATION ----- -->
+        <div class="navigation">
+            <div class="nav-deco"></div>
+            <div class="sub-nav">
+                <span></span>
+                <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
+                    <a href="index.html" class="container active">
+                        <figure class="overlayImg">
+                            <!-- les icônes utilisées du sites flaticon (stickers) -->
+                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
+                        </figure>
+                        <h3>home</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Notre page d'accueil
+                            </p>
+                        </div>
+                    </a>
+                    <a href="about.html" class="container">
+                        <figure class="overlayImg">
+                            <img src="images/ADW-about01-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
+                        </figure>
+                        <h3>ADW</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Objectifs, Valeurs, Collaborateurs
+                            </p>
+                        </div>
+                    </a>
 
-                <a href="gallerie.html" class="container">
-                    <figure class="overlayImg">
-                        <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
-                    </figure>
-                    <h3>Gallerie</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            Lorem ipsum dolor sit amet.
-                        </p>
-                    </div>
-                </a>
+                    <a href="gallerie.html" class="container">
+                        <figure class="overlayImg">
+                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                        </figure>
+                        <h3>Gallerie</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Découvrez nos réalisations
+                            </p>
+                        </div>
+                    </a>
 
-                <a href="cv.html" class="container">
-                    <figure class="overlayImg">
-                        <img src="images/ADW-cv-icone.svg" alt="" class="nav--image" width="100%" height="auto">
-                    </figure>
-                    <h3>Mon CV</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            Lorem ipsum dolor sit amet.
-                        </p>
-                    </div>
-                </a>
-                <a href="faq.html" class="container">
-                    <figure class="overlayImg">
-                        <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
-                            height="auto">
-                    </figure>
-                    <h3>Q & R</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            Questions fréquemment posées
-                        </p>
-                    </div>
-                </a>
-                <a href="contact.html" class="container">
-                    <figure class="overlayImg">
-                        <img src="images/ADW-contact-icone.svg" alt="" class="nav--image" width="100%"
-                            height="auto">
-                    </figure>
-                    <h3>Contact</h3>
-                    <div class="overlayText">
-                        <p class="text">
-                            Lorem ipsum dolor sit amet.
-                        </p>
-                    </div>
-                </a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </nav>
+                    <a href="cv.html" class="container">
+                        <figure class="overlayImg">
+                            <img src="images/ADW-cv-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                        </figure>
+                        <h3>Mon CV</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Découvrez mes formations et mes expériences
+                            </p>
+                        </div>
+                    </a>
+                    <a href="faq.html" class="container">
+                        <figure class="overlayImg">
+                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
+                        </figure>
+                        <h3>Q & R</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Questions fréquemment posées
+                            </p>
+                        </div>
+                    </a>
+                    <a href="contact.html" class="container">
+                        <figure class="overlayImg">
+                            <img src="images/ADW-contact-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
+                        </figure>
+                        <h3>Contact</h3>
+                        <div class="overlayText">
+                            <p class="text">
+                                Pour plus d'information,
+                                Laissez nous un message.
+                            </p>
+                        </div>
+                    </a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </nav>
+            </div>
         </div>
-    </div>
 
         <!-- Fil d'Ariane -->
         <div class="display" style="background-color: cyan; width: 100%;">
