--- a/gallerie.html
+++ b/gallerie.html
@@ -112,20 +112,20 @@
 
 <body>
     <div class="global flex--column">
-        <!-- ---------- HEADER ---------- -->
-        <header>
+         <!-- ---------- HEADER ---------- -->
+         <header>
             <!-- <figure class="logo__container">
-        <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
-    </figure> -->
+                <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
+            </figure> -->
             <figure class="banner__container">
                 <img Srcset="images/ADW-banner640px-04.png 640px images/ADW-banner768vw-04.png 768px images/ADW-banner100vw-03.png 1200px "
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
 
             </figure>
-            <figure class="avatar__container">
-                <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-            </figure>
+            
+            <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
+           
         </header>
 
 
@@ -134,11 +134,12 @@
             <div class="nav-deco"></div>
             <div class="sub-nav">
                 <span></span>
-                <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
+                <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
                     <a href="index.html" class="container active">
                         <figure class="overlayImg">
                             <!-- les icônes utilisées du sites flaticon (stickers) -->
-                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
                         </figure>
                         <h3>home</h3>
                         <div class="overlayText">
@@ -155,20 +156,19 @@
                         <h3>ADW</h3>
                         <div class="overlayText">
                             <p class="text">
-                                L'histoire, les valeurs, les collaborateurs et notre travail
+                                Objectifs, Valeurs, Collaborateurs
                             </p>
                         </div>
                     </a>
 
                     <a href="gallerie.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
+                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
                         </figure>
                         <h3>Gallerie</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez nos réalisations
                             </p>
                         </div>
                     </a>
@@ -180,13 +180,14 @@
                         <h3>Mon CV</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez mes formations et mes expériences
                             </p>
                         </div>
                     </a>
                     <a href="faq.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
+                                height="auto">
                         </figure>
                         <h3>Q & R</h3>
                         <div class="overlayText">
@@ -203,7 +204,8 @@
                         <h3>Contact</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Pour plus d'information,
+                                Laissez nous un message.
                             </p>
                         </div>
                     </a>
