--- a/index.html
+++ b/index.html
@@ -343,18 +343,16 @@
                     <h2>Bâtir votre site web</h2>
                     <div class="conclusion__texte--grid">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis assumenda culpa ex voluptate.
-                            Maxime quasi ullam accusamus inventore obcaecati delectus.
+                            Lorsque l’expérience de l’utilisateur est supérieure à l’attente de l’utilisateur, la confiance est établie. 
+                            Colm Tuite – Designer & développeur d’applications.
                         </p>
                         <p>
-                            1 Pierre 5: 8<br>
-                            Soyez sobres, veillez. Votre adversaire, le diable, rôde comme un lion rugissant, cherchant qui
-                            il dévorera.
+                            Il y a trois réponses possibles : oui, non, et WOW ! Wow est la réaction que vous devez rechercher. 
+                            Milton Glaser – Graphiste & typographe.
                         </p>
                         <p>
-                            1 Pierre 5: 8<br>
-                            Soyez sobres, veillez. Votre adversaire, le diable, rôde comme un lion rugissant, cherchant qui
-                            il dévorera.
+                            La simplicité se démarque, alors que la complexité va se perdre inexorablement dans la foule. 
+                            Kevin Barnett – Développeur back-end.
                         </p>
                     </div>
                 </div>
@@ -362,18 +360,15 @@
                     <h2>Une vitrine sur le monde</h2>
                     <div class="conclusion__texte--grid">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis assumenda culpa ex voluptate.
-                            Maxime quasi ullam accusamus inventore obcaecati delectus.
+                            Soyez la mesure de la qualité. De nombreuses personnes n’ont pas l’habitude d’un environnement où ce qui est attendu, c’est l’excellence. 
+                            Steve Jobs – Gourou d’Apple.
                         </p>
                         <p>
-                            1 Pierre 5: 8<br>
-                            Soyez sobres, veillez. Votre adversaire, le diable, rôde comme un lion rugissant, cherchant qui
-                            il dévorera.
+                            L’essence d’un projet, c’est l’harmonie parfaite entre l’esthétique, l’utile et le juste. 
+                            Frank Lloyd Wright – Architecte & designer d’intérieur.
                         </p>
                         <p>
-                            1 Pierre 5: 8<br>
-                            Soyez sobres, veillez. Votre adversaire, le diable, rôde comme un lion rugissant, cherchant qui
-                            il dévorera.
+                            Errare humanum est, perseverare diabolicum
                         </p>
                     </div>
                 </div>
