--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
                     <h2>Bâtir votre site web</h2>
                     <div class="conclusion__texte--grid">
                         <p>
-                            Lorsque l’expérience de l’utilisateur est supérieure à l’attente de l’utilisateur, la confiance est établie. 
-                            Colm Tuite – Designer & développeur d’applications.
+                            Lorsque l'expérience de l'utilisateur est supérieure à l'attente de l'utilisateur, la confiance est établie. 
+                            Colm Tuite - Designer & développeur d'applications.
                         </p>
                         <p>
                             Il y a trois réponses possibles : oui, non, et WOW ! Wow est la réaction que vous devez rechercher. 
-                            Milton Glaser – Graphiste & typographe.
+                            Milton Glaser - Graphiste & typographe.
                         </p>
                         <p>
                             La simplicité se démarque, alors que la complexité va se perdre inexorablement dans la foule. 
-                            Kevin Barnett – Développeur back-end.
+                            Kevin Barnett - Développeur back-end.
                         </p>
                     </div>
                 </div>
@@ -360,12 +360,12 @@
                     <h2>Une vitrine sur le monde</h2>
                     <div class="conclusion__texte--grid">
                         <p>
-                            Soyez la mesure de la qualité. De nombreuses personnes n’ont pas l’habitude d’un environnement où ce qui est attendu, c’est l’excellence. 
-                            Steve Jobs – Gourou d’Apple.
+                            Soyez la mesure de la qualité. De nombreuses personnes n'ont pas l'habitude d'un environnement où ce qui est attendu, c’est l’excellence. 
+                            Steve Jobs - Gourou d'Apple.
                         </p>
                         <p>
-                            L’essence d’un projet, c’est l’harmonie parfaite entre l’esthétique, l’utile et le juste. 
-                            Frank Lloyd Wright – Architecte & designer d’intérieur.
+                            L'essence d'un projet, c'est l'harmonie parfaite entre l'esthétique, l'utile et le juste. 
+                            Frank Lloyd Wright - Architecte & designer d'intérieur.
                         </p>
                         <p>
                             Errare humanum est, perseverare diabolicum
