--- a/index.html
+++ b/index.html
@@ -342,15 +342,15 @@
                 <div class="conclusion__texte">
                     <h2>Bâtir votre site web</h2>
                     <div class="conclusion__texte--grid">
-                        <p>
+                        <p class="citation">
                             Lorsque l'expérience de l'utilisateur est supérieure à l'attente de l'utilisateur, la confiance est établie. 
                             Colm Tuite - Designer & développeur d'applications.
                         </p>
-                        <p>
+                        <p class="citation">
                             Il y a trois réponses possibles : oui, non, et WOW ! Wow est la réaction que vous devez rechercher. 
                             Milton Glaser - Graphiste & typographe.
                         </p>
-                        <p>
+                        <p  class="citation">
                             La simplicité se démarque, alors que la complexité va se perdre inexorablement dans la foule. 
                             Kevin Barnett - Développeur back-end.
                         </p>
@@ -359,15 +359,15 @@
                 <div class="conclusion__texte">
                     <h2>Une vitrine sur le monde</h2>
                     <div class="conclusion__texte--grid">
-                        <p>
+                        <p  class="citation">
                             Soyez la mesure de la qualité. De nombreuses personnes n'ont pas l'habitude d'un environnement où ce qui est attendu, c’est l’excellence. 
                             Steve Jobs - Gourou d'Apple.
                         </p>
-                        <p>
+                        <p  class="citation">
                             L'essence d'un projet, c'est l'harmonie parfaite entre l'esthétique, l'utile et le juste. 
                             Frank Lloyd Wright - Architecte & designer d'intérieur.
                         </p>
-                        <p>
+                        <p  class="citation">
                             Errare humanum est, perseverare diabolicum
                         </p>
                     </div>
