--- a/index.html
+++ b/index.html
@@ -201,19 +201,19 @@
                 
                 <h3>Projet web</h3>
                 <p>
-                    *  logo<br>
+                    *  Conception d'un site internet<br>
                 </p>
                 <h3>Charte Graphique</h3>
                 <p>
-                    *  logo<br>
+                    *  Identité visuelle<br>
                 </p>
                 <h3>CMS : WordPress</h3>
                 <p>
-                    *  logo<br>
+                    *  Création d'un site web à l'aide d'un logiciel<br>
                 </p>
                 <h3>Developpement web</h3>
                 <p>
-                    *  logo<br>
+                    *  Création d'un site web avec du code html, css et intégration javascript<br>
                 </p>
                 <h3>Un site prêt pour votre visibilité</h3>
             </div>
