--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
                     <img src="images/photo-adw.svg" alt="">
                 </a>
                 <a href="graphisme.html" >
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/graphisme-adw1.svg" alt="">
                     <span>Infographiste </span>
                 </a>
 
                 <a href="uiux.html">
                     <span>UI UX Ergonomie web</span>
-                    <img src="images/uxDesign.jpg" alt="">
+                    <img src="images/uxui-adw.svg" alt="">
                 </a>
 
                 <a href="developpementWeb.html">
-                    <img src="images/devweb.jpg" alt="">
+                    <img src="images/devweb-adw.svg" alt="">
                     <span>Developpement web</span>
                 </a>
 
                 <a href="#webCms.html">
                     <span>Création CMS </span>
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/cms-adw.png" alt="">
                 </a>
             </menu>
 
